Fixed colos-scheme
- Updated styling to set color-scheme properly. This would cause
  browser ui (like scrollbar) to also respect dark mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,9 +27,6 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.dark {
+  color-scheme: dark;
 }
-
